# axes-and-tags

./: .gitignore  README.md  pyproject.toml  railway.toml
src/: db.py  designgalleries.py  designspace.py  generate_dormroom.py  generate_svg.py  generate_threejs.py  main.py  server.py  viewer.html
src/domains/: README.md  __init__.py  domain.py
src/domains/dormroom/: __init__.py  dormroom_scripts.js  dormroom_viewer.py  dormroom_viewer_example.py  generate_dormroom.py  prompts.py
src/domains/imagegen/: generate_imagegen.py  image_scripts.js  image_viewer.py  imagegen.py  prompts.py
src/domains/p5js/: generate_p5.py  p5_scripts.js
src/domains/shaders/: generate_shader.py  prompts.py  shader.py  shader_scripts.js
src/domains/svg/: generate_svg.py  prompts.py  svg_scripts.js  svg_viewer.py  svg_viewer_example.py
src/domains/text/: generate_text.py  prompts.py  text_scripts.js  text_viewer.py  textgen.py
src/domains/threejs/: generate_threejs.py  prompts.py  threejs.py  threejs_scripts.js
src/domains/ui/: generate_ui.py  prompts.py  ui.py  ui_scripts.js  ui_viewer.py
src/lib/: models.py  svg_viewer.py  utils.py
src/lib/viewer/: svg_viewer.py  threejs_viewer.py
src/models/: models.py  prompts.py
src/static/: ablation_scripts.js  ablation_viewer_scripts.js  scripts.js  start_scripts.js  styles.css  tailwind.config.js
src/templates/: ablation_completed.html  ablation_generated.html  ablation_start.html  ablation_viewer.html  ablations_overview.html  generated.html  index.html  tutorial.html
src/viewer/: README.md  viewer.py
(+30 files in other folders)
