[project]
name = "svgrl"
version = "0.1.0"
description = "In context reinforcement learning to generate SVGs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fal-client>=0.5.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "openai>=1.72.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
